# taskra

./: .gitignore  LICENSE  Makefile  Publish.md  README.md  cleanup_report.txt  et --hard ed6cbe097544ef550e58077cb6c2c87dda1d522e  out.json  pyproject.toml  pytest.ini  taskra.code-workspace
.github/workflows/: ci.yml  publish.yml
benchmarks/: model_vs_dict.py  model_vs_dict_enhanced.py
docs/: APIPydanticModelsRefactor.md  BashCompletion.md  CIBenchmarkingPlan.md  CodeGuide.md  CompletionTroubleshooting.md  ImplementationPlan.md  JIRA-REST-API.md  PerformanceOptimizationPlan.md  ProjectDesign.md  PydanticKnowledgeTransfer.md  PydanticMigrationCleanup.md  PydanticModelAdapters.md  PydanticModelAudit.md  PydanticModelMigrationLessons.md  PydanticModelMigrationProgress.md  PydanticModelSerializationPhase2.md  PydanticModelStandardizationPhase1.md  PydanticModelStandards.md  PydanticModelTestingPlan.md  PydanticModelUsageGuide.md  TestingWithVCR.md  project_overview.md
scripts/: cleanup.py  taskra-completion.bash
taskra/: __init__.py
taskra/api/: auth.py  client.py
taskra/cmd/: __init__.py  main.py
taskra/config/: account.py  config_cmd.py  manager.py
taskra/core/: __init__.py  comments.py  issues.py  projects.py  reports.py  tickets.py  users.py  worklogs.py
taskra/presentation/: __init__.py  base.py  errors.py  issues.py  projects.py  reports.py  worklogs.py
taskra/utils/: __init__.py  cache.py  debug.py  model_adapters.py  model_cache.py  optimization.py  serialization.py
tests/: conftest.py
tests/core/: test_worklogs.py
tests/unit/: conftest.py
(+52 files in other folders)
