[tool.poetry]
name = "taskra"
version = "0.1.6"
description = "A command-line tool for task and project management"
authors = ["JV <jason.viloria@outlook.com>"]
readme = "README.md"
packages = [{include = "taskra"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.31.0"
pydantic = "^2.6.1"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.3.1"
pytest-html = "^4.1.1"
vcrpy = "^5.1.0"
coverage = "^7.3.2"
pytest-vcr = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
taskra = "taskra.cmd:cli"
